# oslm-analyst

./: .gitignore  .mcp.json  CLAUDE.md  README.md  eval_summary_ref.csv  infra_summary_ref.csv  pyproject.toml
.claude/skills/osir-lmts-analyst/: SKILL.md
config/: dataset_descendants.jsonl  dataset_info.jsonl  dataset_modality.json  hf_orgs.yaml  model_descendants.jsonl  model_info.jsonl  model_modality.json  org_links.json  orgs.yaml  osir_lmts_orgs.json  other-source-datasets.jsonl
osir_lmts/: README.md  monthly_task.sh
scripts/: print_hf_model_info.py  print_ms_model_info.py
scripts/debug/: osir_lmts_raw_data_check.py
scripts/fix/: fix_date_crawl.py  fix_null_to_zero.py  modify_date_crawl.py  remove_null_modality_line.py
scripts/migration/: migrate_descendants_data.py  migrate_modality_info.py  migrate_osir_lmts_data.py  migrate_oslm_crawler_data.py
scripts/osir_lmts/: test.sh
scripts/test/: print_hf_model_info.py  print_ms_model_info.py  test.py
src/oslm_analyst/: cli.py  crawl.py  data_utils.py  mcp_server.py  utils.py
src/oslm_analyst/crawlers/: baai_data.py  crawl_utils.py  huggingface.py  modelscope.py  open_data_lab.py
src/oslm_analyst/database/: __init__.py  osir_lmts.py
src/oslm_analyst/processors/: modality.py  osir_lmts.py  osir_lmts_data.py  osir_lmts_rank.py
src/oslm_analyst/ui/: dashboard.py
src/oslm_crawler/: cli.py
tests/crawlers/: test_baai_data.py  test_huggingface.py  test_modelscope.py  test_open_data_lab.py
