[project]
name = "oslm-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Leo", email = "95532869+MorePeanuts@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
  "huggingface-hub>=1.2.1",
  "jsonlines>=4.0.0",
  "loguru>=0.7.3",
  "modelscope>=1.33.0",
  "pandas>=2.3.3",
  "pytest>=8.4.2",
  "selenium>=4.38.0",
  "tenacity>=9.1.2",
  "typer>=0.20.0",
  "webdriver-manager>=4.0.2",
]

[project.scripts]
oslm-analyst = "oslm_analyst.cli:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
